
AMI
------------------
 * A new ContactStatus event has been added that reflects res_pjsip contact
   lifecycle changes:  Created, Removed, Reachable, Unreachable, Unknown.

 * Added the Linkedid header to the common channel headers listed for each
   channel in AMI events.

ARI
------------------
 * A new feature has been added that enables the retrieval of modules and
   module information through an HTTP request.

res_pjsip
------------------
* A new 'g726_non_standard' endpoint option has been added that, when set to
  'yes' and g.726 audio is negotiated, forces the codec to be treated as if it
  is AAL2 packed on the channel.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.3.0 to Asterisk 13.4.0 ------------
------------------------------------------------------------------------------

chan_pjsip
------------------
 * New 'rpid_immediate' option to control if connected line update information
   goes to the caller immediately or waits for another reason to send the
   connected line information update.  See the online option documentation for
   more information.  Defaults to 'no' as setting it to 'yes' can result in
   many unnecessary messages being sent to the caller.

 * The configuration setting 'progressinband' now defaults to 'no', which
   matches the actual behavior of previous versions.

res_pjsip
------------------
 * A new CLI command has been added: "pjsip show settings", which shows
   both the global and system configuration settings.

 * A new aor option has been added: "qualify_timeout", which sets the timeout
   in seconds for a qualify.  The default is 3 seconds.  This overrides the
   hard coded 32 seconds in pjproject.

 * Endpoint status will now change to "Unreachable" when all contacts are
   unavailable.  When any contact becomes available, the endpoint will status
   will change back to "Reachable".
